<resources>
    <string name="app_name" translatable="false">Movie Catalogue</string>
    <string name="release">Release</string>
    <string name="setting">Setting</string>
    <string name="movies">Movies</string>
    <string name="overview">Overview</string>
    <string name="tv_series">TV Series</string>
    <string name="success_favourties">Success Saving to Favourites</string>
    <string name="failed_favourties">Failed Saving to Favourites</string>
    <string name="success_remove_favourites">Success Removing Favourites</string>
    <string name="failed_remove_favourites">Failed Removing Favourites</string>
    <string name="favorite">Favorite</string>
    <string name="no_favourites_movies">No Favourites Movie</string>
    <string name="favourites_movie">Favourites Movies</string>
    <string name="favourites_tv">Favourites TV</string>
    <string name="no_favourites_tvs">No Favourite TV</string>
    <string name="comeback_again">Good Morning, have you watch your favourites movie or tv?</string>
    <string name="language">Language</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="notifications">Notifications</string>
    <string name="release_reminder_message">Hi, today %s is released</string>
    <string name="tv_release_reminder">TV Release Reminder</string>
    <string name="movie_release_reminder">Movie Release Reminder</string>
    <string name="search">Search</string>
    <string name="looking_for">Looking for Movies or TVs?\nJust search it and submit!</string>
    <string name="no_tv_released">No TV Series Released Today</string>
    <string name="no_movie_released">No Movies Released Today</string>
    <string name="general_error">Something went wrong, please try again later</string>
    <string name="videos">Videos</string>
</resources>
