<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                    android:id="@+id/movie_poster"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"
                    tools:src="@drawable/poster_spiderman" />

            <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
            android:id="@+id/nested_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

            <RelativeLayout
                    android:id="@+id/movie_score_frame"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:background="@drawable/score_frame"
                    app:layout_constraintEnd_toStartOf="@id/movie_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                <TextView
                        android:id="@+id/movie_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:textColor="#ffffff"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        tools:text="100" />

            </RelativeLayout>

            <TextView
                    android:id="@+id/movie_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:textColor="#000000"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@id/movie_score_frame"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/movie_score_frame"
                    app:layout_constraintTop_toTopOf="@id/movie_score_frame"
                    tools:text="Spiderman Into The Spiderverse" />


            <RelativeLayout
                    android:id="@+id/movie_info_frame"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/bg_rounded_white"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toTopOf="@+id/movie_overview_frame"
                    app:layout_constraintTop_toBottomOf="@id/movie_score_frame">

                <TextView
                        android:id="@+id/movie_release_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:text="@string/release"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                <TextView
                        android:id="@+id/movie_release"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/movie_release_title"
                        android:layout_alignParentStart="true"
                        android:layout_marginTop="5dp"
                        android:textColor="#000000"
                        android:textSize="14sp"
                        tools:text="November 12th, 2019" />

            </RelativeLayout>

            <LinearLayout
                    android:id="@+id/movie_overview_frame"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/bg_rounded_white"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toTopOf="@id/movie_trailer_frame"
                    app:layout_constraintTop_toBottomOf="@id/movie_info_frame">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/overview"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                <TextView
                        android:id="@+id/movie_overview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        tools:text="@tools:sample/lorem/random" />

            </LinearLayout>

            <LinearLayout
                    android:id="@+id/movie_trailer_frame"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_rounded_white"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/movie_overview_frame">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/videos"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/movie_trailer"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_marginTop="5dp"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        tools:itemCount="2"
                        tools:listitem="@layout/item_video"
                        tools:orientation="horizontal" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_favorites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:src="@drawable/ic_star_border_24dp"
            app:layout_anchor="@id/nested_scroll_view"
            app:layout_anchorGravity="bottom|end" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>